[tool.poetry]
name = "geojsonchemy"
version = "0.1.1"
description = ""
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geoalchemy2 = "^0.14.3"
orjson = "^3.9.13"
geojson-pydantic = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
